--- a/views/order/index.ejs
+++ b/views/order/index.ejs
@@ -1,19 +1,23 @@
 <div class="container">
-  <h1 class="page-header">ESP Tests</h1>
+  <h1 class="page-header">Orders</h1>
 
 <ul class="list-group">
-  <% orders.forEach(function (orderItem) { %>
+  <% orders.forEach(function (order) { %>
     <li class="list-group-item">
-      <strong><%= orderItem.deviceId %>: </strong>
-      <%= orderItem.description %>
-      || Completed:
-      <% if (orderItem.completed == true) { %>
-        <span class="label label-success">True</span>
-      <% } else if (orderItem.completed == false) { %>
-        <span class="label label-danger">False</span>
-      <% } %>
-      <a class="pull-right" href=<%= "/order/" + orderItem._id %>>View</a>
+      <strong><%= order.order %>: </strong>
     </li>
+
+    // <li class="list-group-item">
+    //   <strong><%= order.deviceId %>: </strong>
+    //   <%= order.description %>
+    //   || Completed:
+    //   <% if (order.completed == true) { %>
+    //     <span class="label label-success">True</span>
+    //   <% } else if (order.completed == false) { %>
+    //     <span class="label label-danger">False</span>
+    //   <% } %>
+    //   <a class="pull-right" href=<%= "/order/" + order._id %>>View</a>
+    // </li>
   <% }) %>
 </ul>
 
