stable version0.0.3, customer package

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/order">View All Orders <span class="sr-only">(current)</span></a></li>
+        <li><a href="/customer">View All Customers <span class="sr-only">(current)</span></a></li>
+        <li><a href="/device">View All Devices <span class="sr-only">(current)</span></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/login">Login</a></li>
