stable v0.04 order package

--- a/views/device/index.ejs
+++ b/views/device/index.ejs
@@ -6,7 +6,7 @@
     <li class="list-group-item">
     <pre><%=device%></pre>
       <strong><%= device.deviceId %>: </strong>
-      <%= device.product[0].title %>
+      <%= device.productId[0].title %>
       <a class="pull-right" href=<%= "/device/" + device._id %>>View</a>
     </li>
   <% }) %>
