--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,11 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/order">View All Orders <span class="sr-only">(current)</span></a></li>
         <li><a href="/customer">View All Customers <span class="sr-only">(current)</span></a></li>
+        <li><a href="/customer/new">Add New Customer <span class="sr-only">(current)</span></a></li>
         <li><a href="/device">View All Devices <span class="sr-only">(current)</span></a></li>
+        <li><a href="/device/new">Add New Device <span class="sr-only">(current)</span></a></li>
+        <li><a href="/product">View All Products <span class="sr-only">(current)</span></a></li>
+        <li><a href="/product/new">Add New Product <span class="sr-only">(current)</span></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/login">Login</a></li>
