--- a/views/device/edit.ejs
+++ b/views/device/edit.ejs
@@ -1,21 +1,24 @@
 <div class="container">
   <h1 class="page-header">Edit</h1>
-  <h2>Device ID: <%=device.deviceId%></h2>
   <pre><%=device%></pre>
+  <h2>Device ID: <%=device.deviceId%></h2>
+  <h3>Current Product: <%=device.productId[0].title%></h3>
+  <h3>Current Customer: <%=device.customerId[0].fullName%></h3>
   <form action=<%= "/device/" + device.id + "?_method=PUT" %> method="POST">
     <div class="form-group">
       <label for="deviceId">Device ID</label>
       <input type="text" name="deviceId" class="form-control" id="deviceIdInput" value="<%= device.deviceId %>">
     </div>
-    <div class="form-group">
-      <label for="product">Product</label>
-      <textarea class="form-control" id="productInput" rows="3" placeholder="Product" name="product"><%= device.product[0].title %></textarea>
-    </div>
     <select name="productId">
       <% products.forEach(function (product) {%>
         <option value="<%=product.id%>"><%= product.title %></option>
       <% }) %>
-    </select>
+  </select>
+  <select name="customerId">
+    <% customers.forEach(function (customer) {%>
+      <option value="<%=customer.id%>"><%= customer.fullName %></option>
+    <% }) %>
+</select>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
 </div>
