--- a/views/product/edit.ejs
+++ b/views/product/edit.ejs
@@ -9,6 +9,10 @@
       <label for="description">Description</label>
       <textarea class="form-control" id="descriptionInput" rows="3" placeholder="Description" name="description"><%= product.description %></textarea>
     </div>
+    <div class="form-group">
+      <label for="imageUrl">Product Image URL</label>
+      <textarea class="form-control" id="imageUrlInput" rows="3" placeholder="Description" name="imageUrl"><%= product.imageUrl %></textarea>
+    </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
 </div>
