--- a/views/product/new.ejs
+++ b/views/product/new.ejs
@@ -8,6 +8,10 @@
       <label for="description">Description</label>
       <textarea class="form-control" id="descriptionInput" rows="3" placeholder="Description" name="description"></textarea>
     </div>
+    <div class="form-group">
+      <label for="imageUrl">Product Image URL</label>
+      <input type="text" class="form-control" id="imageUrlInput" placeholder="Product image url" name="imageUrl">
+    </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
 </div>
