--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Pronto</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="/css/theme1.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
 </head>
 
