--- a/views/order/edit.ejs
+++ b/views/order/edit.ejs
@@ -1,14 +1,10 @@
 <div class="container">
-  <h1 class="page-header">Edit</h1>
+  <h1 class="page-header">Edit Order</h1>
+  <p><%= order.productId[0].title %> </p>
+  <p><%= order.customerId[0].fullName %> </p>
+  <p><%= order.customerId[0].address %> </p>
+  <p><%= order.customerId[0].contactNumber %> </p>
   <form action=<%= "/order/" + order.id + "?_method=PUT" %> method="POST">
-    <div class="form-group">
-      <label for="title">Title</label>
-      <input type="text" name="title" class="form-control" id="titleInput" value="<%= order.title %>">
-    </div>
-    <div class="form-group">
-      <label for="description">Description</label>
-      <textarea class="form-control" id="descriptionInput" rows="3" placeholder="Description" name="description"><%= order.description %></textarea>
-    </div>
 
     <div class="form-group">
       <label for="completed">Completed</label>
