--- a/views/product/index.ejs
+++ b/views/product/index.ejs
@@ -1,14 +1,15 @@
-<div class="container">
-  <h1 class="page-header">All Products</h1>
-
-<ul class="list-group">
-  <% products.forEach(function (product) { %>
-    <li class="list-group-item">
-      <strong><%= product.title %>: </strong>
-      <%= product.description %>
-      <a class="pull-right" href=<%= "/product/" + product._id %>>View</a>
-    </li>
-  <% }) %>
-</ul>
-
+<div class="row">
+    <h1 class="page-header">All Products</h1>
+        <% products.forEach(function (product) { %>
+        <div class="col-md-6">
+        <div class="col-md-6">
+            <h2><%= product.title %>: </h2>
+            <p class="product-desc"><%= product.description %></p>
+        </div>
+        <div class="col-md-6">
+            <a href=<%= "/product/" + product._id %>><img src="<%= product.imageUrl %>" class="product-image" alt="<%= product.title %>"></a>
+        </div>
+        </div>
+        <% }) %>
+      <div class="clearfix"></div>
 </div>
