--- a/views/product/show.ejs
+++ b/views/product/show.ejs
@@ -1,17 +1,20 @@
 <div class="container">
   <h1 class="page-header">Edit Product</h1>
   <pre><%=product%></pre>
-  <ul class="list-group">
-    <li class="list-group-item">
-      <h3><strong><%= product.title %>: </strong></h3>
-      <h4><%= product.description %></h4>
+      <div class="col-md-12">
+      <div class="col-md-6">
+          <h2><%= product.title %>: </h2>
+          <p class="product-desc"><%= product.description %></p>
+      </div>
+      <div class="col-md-6">
+          <a href=<%= "/product/" + product._id %>><img src="<%= product.imageUrl %>" class="product-image" alt="<%= product.title %>"></a>
+          <a class="btn btn-warning" href=<%= "/product/" + product._id + "/edit" %>>Edit</a>
 
-      <a class="btn btn-warning" href=<%= "/product/" + product._id + "/edit" %>>Edit</a>
+          <form class="deleteForm "method="POST" action=<%= "/product/" + product._id + "?_method=DELETE" %>>
+            <button type="submit" class="btn btn-danger">Delete</button>
+          </form>
+      </div>
+      </div>
+      </div>
 
-      <form class="deleteForm "method="POST" action=<%= "/product/" + product._id + "?_method=DELETE" %>>
-        <button type="submit" class="btn btn-danger">Delete</button>
-      </form>
-
-    </li>
-  </ul>
 </div>
