--- a/views/customer/show.ejs
+++ b/views/customer/show.ejs
@@ -1,7 +1,7 @@
 <div class="container">
   <h1 class="page-header">Customer</h1>
   <h2>Name: <%=customer.fullName%></h2>
-  <pre><%=customer%></pre>
+  <!-- <pre><%=customer%></pre> -->
   <ul class="list-group">
     <li class="list-group-item">
       <h3><strong><%= customer.fullName %>: </strong></h3>
