--- a/views/device/edit.ejs
+++ b/views/device/edit.ejs
@@ -1,6 +1,6 @@
 <div class="container">
-  <h1 class="page-header">Edit</h1>
-  <pre><%=device%></pre>
+  <h1 class="page-header">Edit Device</h1>
+  <!-- <pre><%=device%></pre> -->
   <h2>Device ID: <%=device.deviceId%></h2>
   <h3>Current Product: <%=device.productId[0].title%></h3>
   <h3>Current Customer: <%=device.customerId[0].fullName%></h3>
