--- a/views/device/show.ejs
+++ b/views/device/show.ejs
@@ -1,15 +1,11 @@
 <div class="container">
-  <h1 class="page-header">Device ID</h1>
-  <h2>Device ID: <%=device.deviceId%></h2>
-  <pre><%=device%></pre>
+  <h1 class="page-header">Device ID: <%=device.deviceId%></h1>
+  <!-- <pre><%=device%></pre> -->
+  <h4>Product: <%= device.productId[0].title %></h4>
+  <h4>Owner: <%= device.customerId[0].fullName %></h4>
   <ul class="list-group">
     <li class="list-group-item">
-      <h3><strong><%= device.deviceId %>: </strong></h3>
-      <h4><%= device.productId[0].title %></h4>
-      <h4><%= device.customerId.fullName %></h4>
-
       <a class="btn btn-warning" href=<%= "/device/" + device._id + "/edit" %>>Edit</a>
-
       <form class="deleteForm "method="POST" action=<%= "/device/" + device._id + "?_method=DELETE" %>>
         <button type="submit" class="btn btn-danger">Delete</button>
       </form>
