--- a/views/device/new.ejs
+++ b/views/device/new.ejs
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1 class="page-header">New Device</h1>
   <form action="/device" method="POST">
     <div class="form-group">
       <label for="deviceId">Device ID</label>
