--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,5 @@
 <footer>
   <div class="container">
-    <p>&copy; 2016 Pronto, Inc.</p>
-    <p>&copy; Coffee on demand</p>
+    <p>&copy; 2017 Pronto, Inc.  Coffee on demand</p>
   </div>
 </footer>
