--- a/views/product/edit.ejs
+++ b/views/product/edit.ejs
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="page-header">Edit</h1>
+  <h1 class="page-header">Edit Product</h1>
   <form action=<%= "/product/" + product.id + "?_method=PUT" %> method="POST">
     <div class="form-group">
       <label for="title">Title</label>
