--- a/views/product/show.ejs
+++ b/views/product/show.ejs
@@ -1,6 +1,6 @@
 <div class="container">
-  <h1 class="page-header">Edit Product</h1>
-  <pre><%=product%></pre>
+  <h1 class="page-header">Product</h1>
+  <!-- <pre><%=product%></pre> -->
       <div class="col-md-12">
       <div class="col-md-6">
           <h2><%= product.title %>: </h2>
