more bootstrap, order model add cancelOrder field

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -270,7 +270,8 @@ h2.pagetitle {
 .paddingsmall{
 	padding:15px;
 }
-
+.product-image{
+}
 /* =========================================================
 04. Navigation
 ============================================================ */
