--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,6 +21,9 @@
 						 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Orders <span class="caret"></span></a>
 						 <ul class="dropdown-menu">
 							 <li><a href="/order">View all</a></li>
+							 <li><a href="/order/completed">View completed orders</a></li>
+							 <li><a href="/order/inprocess">View in-process orders</a></li>
+							 <li><a href="/order/cancelled">View cancelled orders</a></li>
 						 </ul>
 					 </li>
 					 <li class="dropdown">
