--- a/views/device/index.ejs
+++ b/views/device/index.ejs
@@ -2,17 +2,27 @@
 <section class="section green">
     <div class="container">
         <div class="row">
-            <h1 class="page-header">Devices</h1>
-            <ul class="list-group">
                 <% devices.forEach(function (device) { %>
-                      <div class="span5 paddingsmall">
-                        <p><strong>Device ID: </strong><%= device.deviceId %></p>
-                        <p><strong>Linked to: </strong><%= device.productId[0].title %></p>
-                        <p><strong>Owned by : </strong><%= device.customerId[0].fullName %></p>
-                        <p><a class="pull-right btn btn-info" href=<%="/device/" + device._id %>>View</a></p>
+                  <div class="span5 paddingsmall">
+                  <div class="row">
+                      <div class="span3">
+                      <p><strong>Device ID: </strong>
+                          <%= device.deviceId %>
+                      </p>
+                      <p><strong>Linked to: </strong>
+                          <%= device.productId[0].title %>
+                      </p>
+                      <p><strong>Owned by : </strong>
+                          <%= device.customerId[0].fullName %>
+                      </p>
+                      <p><a class="pull-right btn btn-info" href=<%="/device/" + device._id %>>View</a></p>
+                      </div>
+                      <div class="span2">
+                      <a href=<%="/device/" + device._id %>><img src="<%= device.productId[0].imageUrl %>" class="product-image" alt="<%= device.productId[0].title %>"></a>
+                      </div>
+                    </div>
                     </div>
                     <% }) %>
-            </ul>
         </div>
     </div>
 </section>
