--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
 <meta name="author" content="">
 <link href="/css/style.css" rel="stylesheet">
 <link href="/color/default.css" rel="stylesheet">
-<link rel="shortcut icon" href="img/favicon.ico">
+<link rel="shortcut icon" href="/img/favicon.ico">
 <!-- =======================================================
     Theme Name: Maxim
     Theme URL: https://bootstrapmade.com/maxim-free-onepage-bootstrap-theme/
