--- a/views/order/edit.ejs
+++ b/views/order/edit.ejs
@@ -1,47 +1,74 @@
 <% include ../partials/header_order %>
-<section class="section green">
-    <div class="container">
-        <div class="row">
-            <h1 class="page-header">Edit Order</h1>
-            <p>
-                <%= order.productId[0].title %>
-            </p>
-            <p>
-                <%= order.customerId[0].fullName %>
-            </p>
-            <p>
-                <%= order.customerId[0].address %>
-            </p>
-            <p>
-                <%= order.customerId[0].contactNumber %>
-            </p>
-            <form action=<%="/order/" + order.id + "?_method=PUT" %> method="POST">
-
-                <div class="form-group">
-                    <label for="completed">Completed</label>
-                    <div class="radio">
-                        <label>
-          <% if (order.completed == true) { %>
-            <input type="radio" name="completed" id="true" value="true" checked="checked">
-          <% } else { %>
-            <input type="radio" name="completed" id="true" value="true">
-          <% } %>
-          True
-        </label>
-                    </div>
-                    <div class="radio">
-                        <label>
-          <% if (order.completed == false) { %>
-            <input type="radio" name="completed" id="false" value="false" checked="checked">
-          <% } else { %>
-            <input type="radio" name="completed" id="false" value="false">
-          <% } %>
-          False
-        </label>
-                    </div>
+    <section class="section green">
+        <div class="container">
+            <div class="row">
+                <div class="span8">
+                    <h1 class="page-header">Edit Order</h1>
+                    <h3><strong>Order Id: <%= order._id %> </strong></h3>
+                    <p>
+                        <%= order.productId[0].title %>
+                    </p>
+                    <p>
+                        <%= order.customerId[0].fullName %>
+                    </p>
+                    <p>
+                        <%= order.customerId[0].address %>
+                    </p>
+                    <p>
+                        <%= order.customerId[0].contactNumber %>
+                    </p>
+                    <form action=<%="/order/" + order.id + "?_method=PUT" %> method="POST">
+                        <div class="row">
+                            <div class="form-group span4">
+                                <label for="completed">Completed</label>
+                                <div class="radio">
+                                    <label>
+                        <% if (order.completed == true) { %>
+                          <input type="radio" name="completed" id="true" value="true" checked="checked">
+                        <% } else { %>
+                          <input type="radio" name="completed" id="true" value="true">
+                        <% } %>
+                        True
+                      </label>
+                                </div>
+                                <div class="radio">
+                                    <label>
+                        <% if (order.completed == false) { %>
+                          <input type="radio" name="completed" id="false" value="false" checked="checked">
+                        <% } else { %>
+                          <input type="radio" name="completed" id="false" value="false">
+                        <% } %>
+                        False
+                      </label>
+                                </div>
+                            </div>
+                            <div class="form-group span4">
+                                <label for="cancelOrder">Cancel Order</label>
+                                <div class="radio">
+                                    <label>
+                            <% if (order.cancelOrder == true) { %>
+                              <input type="radio" name="cancelOrder" id="true" value="true" checked="checked">
+                            <% } else { %>
+                              <input type="radio" name="cancelOrder" id="true" value="true">
+                            <% } %>
+                            True
+                          </label>
+                                </div>
+                                <div class="radio">
+                                    <label>
+                            <% if (order.cancelOrder == false) { %>
+                              <input type="radio" name="cancelOrder" id="false" value="false" checked="checked">
+                            <% } else { %>
+                              <input type="radio" name="cancelOrder" id="false" value="false">
+                            <% } %>
+                            False
+                          </label>
+                                </div>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
