--- a/views/product/edit.ejs
+++ b/views/product/edit.ejs
@@ -2,6 +2,7 @@
     <section class="section green">
         <div class="container">
             <div class="row">
+              <div class="span8">
                 <h1 class="page-header">Edit Product</h1>
                 <form action=<%="/product/" + product.id + "?_method=PUT" %> method="POST">
                     <div class="form-group">
@@ -18,6 +19,7 @@
                     </div>
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
+              </div>
             </div>
         </div>
     </section>
