--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <div id="header-wrapper" class="header-slider">
     <header class="clearfix">
         <div class="logo">
-            <img src="images/logo.png" alt="" />
+            <img src="/images/logo.png" alt="Pronto" />
         </div>
         <div class="container">
             <div class="row">
@@ -82,194 +82,14 @@
 </section>
 <!-- end section: services -->
 <!-- section: products -->
-<section id="products" class="section">
-    <div class="container clearfix">
-        <h4>Our Products</h4>
-        <!-- portfolio filter -->
-        <div class="row">
-            <div id="filters" class="span12">
-                <ul class="clearfix">
-                    <li>
-                        <a href="#" data-filter="*" class="active">
-                            <h5>All</h5>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" data-filter=".coffee">
-                            <h5>Coffee</h5>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" data-filter=".tea">
-                            <h5>Tea</h5>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" data-filter=".chocolate">
-                            <h5>Chocolate</h5>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <!-- END PORTFOLIO FILTERING -->
-        </div>
-        <div class="row">
-            <div class="span12">
-                <div id="portfolio-wrap">
-                    <!-- portfolio item -->
-                    <div class="portfolio-item grid coffee">
-                        <div class="portfolio">
-                            <a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-                                <img src="img/works/1.png" alt="" />
-                                <div class="portfolio-overlay">
-                                    <div class="thumb-info">
-                                        <h5>Portfolio name</h5>
-                                        <i class="icon-plus icon-2x"></i>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- end portfolio item -->
-                    <!-- portfolio item -->
-                    <div class="portfolio-item grid coffee">
-                        <div class="portfolio">
-                            <a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-                                <img src="img/works/2.png" alt="" />
-                                <div class="portfolio-overlay">
-                                    <div class="thumb-info">
-                                        <h5>Portfolio name</h5>
-                                        <i class="icon-plus icon-2x"></i>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- end portfolio item -->
-                    <!-- portfolio item -->
-                    <div class="portfolio-item grid coffee">
-                        <div class="portfolio">
-                            <a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-                                <img src="img/works/3.png" alt="" />
-                                <div class="portfolio-overlay">
-                                    <div class="thumb-info">
-                                        <h5>Portfolio name</h5>
-                                        <i class="icon-plus icon-2x"></i>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- end portfolio item -->
-                    <!-- portfolio item -->
-                    <div class="portfolio-item grid tea">
-                        <div class="portfolio">
-                            <a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-                                <img src="img/works/4.png" alt="" />
-                                <div class="portfolio-overlay">
-                                    <div class="thumb-info">
-                                        <h5>Portfolio name</h5>
-                                        <i class="icon-plus icon-2x"></i>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- end portfolio item -->
-                    <!-- portfolio item -->
-                    <div class="portfolio-item grid chocolate">
-                        <div class="portfolio">
-                            <a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-                                <img src="img/works/5.png" alt="" />
-                                <div class="portfolio-overlay">
-                                    <div class="thumb-info">
-                                        <h5>Portfolio name</h5>
-                                        <i class="icon-plus icon-2x"></i>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- end portfolio item -->
-                    <!-- portfolio item -->
-                    <div class="portfolio-item grid tea">
-                        <div class="portfolio">
-                            <a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-                                <img src="img/works/6.png" alt="" />
-                                <div class="portfolio-overlay">
-                                    <div class="thumb-info">
-                                        <h5>Portfolio name</h5>
-                                        <i class="icon-plus icon-2x"></i>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- end portfolio item -->
-                    <!-- portfolio item -->
-                    <div class="portfolio-item grid tea">
-                        <div class="portfolio">
-                            <a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-                                <img src="img/works/7.png" alt="" />
-                                <div class="portfolio-overlay">
-                                    <div class="thumb-info">
-                                        <h5>Portfolio name</h5>
-                                        <i class="icon-plus icon-2x"></i>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- end portfolio item -->
-                    <!-- portfolio item -->
-                    <div class="portfolio-item grid chocolate">
-                        <div class="portfolio">
-                            <a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-                                <img src="img/works/7.png" alt="" />
-                                <div class="portfolio-overlay">
-                                    <div class="thumb-info">
-                                        <h5>Portfolio name</h5>
-                                        <i class="icon-plus icon-2x"></i>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- end portfolio item -->
-                    <!-- portfolio item -->
-                    <div class="portfolio-item grid tea">
-                        <div class="portfolio">
-                            <a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-                                <img src="img/works/7.png" alt="" />
-                                <div class="portfolio-overlay">
-                                    <div class="thumb-info">
-                                        <h5>Portfolio name</h5>
-                                        <i class="icon-plus icon-2x"></i>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- end portfolio item -->
-                    <!-- portfolio item -->
-                    <div class="portfolio-item grid chocolate">
-                        <div class="portfolio">
-                            <a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-                                <img src="img/works/7.png" alt="" />
-                                <div class="portfolio-overlay">
-                                    <div class="thumb-info">
-                                        <h5>Portfolio name</h5>
-                                        <i class="icon-plus icon-2x"></i>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- end portfolio item -->
-                </div>
-            </div>
-        </div>
-    </div>
+<section id="products" class="section green">
+  <div class="row">
+  <div class="span10 offset1 slick_slider">
+    <% products.forEach(function (product) { %>
+      <div><img src="<%= product.imageUrl %>" alt="<%= product.title %>" /></div>
+      <% }) %>
+</div>
+</div>
 </section>
 <!-- spacer section -->
 <section class="spacer bg3">
