--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,8 @@
 <meta name="author" content="">
 <link href="/css/style.css" rel="stylesheet">
 <link href="/color/default.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="/slick/slick.css"/>
+<link rel="stylesheet" type="text/css" href="/slick/slick-theme.css"/>
 <link rel="shortcut icon" href="/img/favicon.ico">
 <!-- =======================================================
     Theme Name: Maxim
@@ -33,5 +35,7 @@
                 <script src="/js/animate.js"></script>
                 <script src="/js/validate.js"></script>
                 <script src="/js/custom.js"></script>
+                <script src="/slick/slick.min.js"></script>
+                <script src="/js/slick.js"></script>
 </body>
 </html>
