revise homepage, bootstrap refactoring

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row">
           <div class="span6 offset3">
-            <h1 class="page-header">Login</h1>
-            <%- include('../partials/flash') %>
+            <h4>Login</h4>
+                <%- include('../partials/flash') %>
                 <%- include('../partials/authform', {formUrl: '/login'}) %>
           </div>
         </div>
