--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,7 +127,7 @@ a.scrollup i:hover {
 }
 /*---------- forms ----------*/
 
-input[type=text], input[type=submit], textarea {
+input[type=text], input[type=submit], textarea, input[type=email] , input[type=password] {
 	width: 100%;
 	padding: 1em;
 	font-size: 1.1em;
@@ -945,7 +945,7 @@ section#about {
 	z-index: 999;
 }
 
-#contact-form input[type=text], .contactForm textarea {
+#contact-form input[type=text], .contactForm textarea, .contactForm input[type=email] , .contactForm input[type=password] {
 	background: rgba(227, 231, 228, 1);
 	font-family: 'Open Sans', sans serif;
 	border: 0;
@@ -958,7 +958,7 @@ section#about {
 	height: 156px;
 }
 
-#contact-form input[type=text]:focus, .contactForm textarea:focus {
+#contact-form input[type=text]:focus, .contactForm textarea:focus, .contactForm input[type=email]:focus, .contactForm input[type=password]:focus{
 	background: #fff;
 	color: #555;
 	box-shadow: none;
@@ -968,7 +968,7 @@ section#about {
 	-moz-transition: background 0.25 ease-in;
 	-webkit-transition: background 0.25 ease-in;
 }
-#contact-form input[type=text] {
+#contact-form input[type=text], .contactForm input[type=email] , .contactForm input[type=password] {
 	height: 60px;
 	margin-bottom:30px;
 }
