--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
           <div class="span6 offset3">
-            <h1 class="page-header">Register</h1>
+            <h4>Register</h4>
             <%- include('../partials/flash') %>
             <%- include('../partials/authform', {formUrl: '/signup'}) %>
           </div>
