--- a/views/partials/authform.ejs
+++ b/views/partials/authform.ejs
@@ -1,11 +1,11 @@
-<div class="container">
-  <form action="<%= formUrl %>" method="POST">
+<div id="contact-form">
+  <form action="<%= formUrl %>" method="POST" class="contactForm">
     <div class="form-group">
       <input type="email" class="form-control" placeholder="email" name="email">
     </div>
     <div class="form-group">
       <input type="password" class="form-control" placeholder="password" name="password">
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="btn btn-theme">Submit</button>
   </form>
 </div>
